Learning html and ktor commit

--- a/src/main/resources/task-ui/task-form.html
+++ b/src/main/resources/task-ui/task-form.html
@@ -15,12 +15,12 @@
   </div>
 
   <div>
-    <label for="description">Description: </label>
+    <label for="Description">Description: </label>
     <input type="text" id="Description" name="description" size="30">
   </div>
 
   <div>
-    <label for="priority">Priority: </label>
+    <label for="Priority">Priority: </label>
     <select id="Priority" name="priority">
       <option name="Low">Low</option>
       <option name="Meduim">Meduim</option>
